--- a/src/app/postcode/postcode.component.html
+++ b/src/app/postcode/postcode.component.html
@@ -1,9 +1,9 @@
 <div>
-  <div class="form-group left float-left">
+  <div class="form-group">
       <label for="zipcode">Postcode:</label>
       <input type="text" #zipcode class="form-control zipcode left" id="zipcode" placeholder="1234AB">
     </div>
-    <div class="form-group right">
+    <div class="form-group">
       <label for="number">Huisnummer:</label>
       <input type="number" #number class="form-control glyphicon number right" id="number" placeholder="12">
     </div>
